# pam

./: .gitignore  .travis-update-gh-pages.sh  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  azure-pipelines.yml  build.rs
examples/: spawn_bash.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: auth.rs  authenticator.rs  client.rs  conv.rs  conversation.rs  enums.rs  env.rs  ffi.rs  functions.rs  lib.rs  module.rs  simple.rs  types.rs  wrapped.rs
