[package]

name = "pam"
version = "0.7.0"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Safe Rust wrappers for PAM authentication"
license = "MIT OR Apache-2.0"
categories = ["authentication"]

repository = "https://github.com/1wilkens/pam/"
documentation = "https://docs.rs/pam/"
readme = "README.md"

edition = "2018"

[badges]
azure-devops = { project = "1wilkens/ci", pipeline = "pam" }

[features]
default = ["auth"]

auth = ["users"]
module = []

[dependencies]
pam-macros = "=0.0.1"
libc    = "^0.2"
pam-sys = "1.0.0-alpha2"
users   = { version = "^0.9", optional = true }

[dev-dependencies]
rpassword = "2.0"
