[package]

name = "pam"
version = "0.8.0"
authors = ["Florian Wilkens <gh@1wilkens.org>"]
description = "Safe Rust wrappers for PAM authentication"
license = "MIT OR Apache-2.0"
categories = ["authentication"]

repository = "https://github.com/1wilkens/pam/"
documentation = "https://docs.rs/pam/"
readme = "README.md"
include = [ "LICENSE-*", "README.md", "CHANGELOG.md", "/src", "/examples"  ]

edition = "2018"

[badges]
azure-devops = { project = "1wilkens/ci", pipeline = "pam" }

[features]
default = ["client"]

functions = []
client = ["uzers"]
module = []

[dependencies]
pam-macros = "=0.0.3"
libc    = "^0.2"
pam-sys = "1.0.0-alpha5"
memchr = "2.5.0"
uzers = { version = "0.11.3", optional = true }

[dev-dependencies]
rpassword = "7.2.0"

[workspace]
members = [
    ".",
    "macros"
]
